--- a/Cambrian-Explosion/index.html
+++ b/Cambrian-Explosion/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -338,7 +341,7 @@ if (!doNotTrack) {
 
 
 <a href="../Metazoa" rel="noopener">Metazoan</a>
- common ancestor is believed to have existed prior to this ldquo;explosionrdquo;.</p>
+ common ancestor is believed to have existed prior to this "explosion".</p>
 <p>The Cambrian explosion lasted aprox 5-10 million years, while the Cambrian period lasted longer. See 
 
 
