--- a/Cladogenesis/index.html
+++ b/Cladogenesis/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -334,7 +337,7 @@ if (!doNotTrack) {
 
 
 <a href="../Speciation" rel="noopener">Speciation</a>
- whereby a parent species splits into two new species. Forms a ldquo;branchrdquo; on the tree of life known as a <strong>clade</strong>.</p>
+ whereby a parent species splits into two new species. Forms a "branch" on the tree of life known as a <strong>clade</strong>.</p>
 <p>Also see 
 
 
