--- a/Complex-Numbers/index.html
+++ b/Complex-Numbers/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -361,7 +364,7 @@ if (!doNotTrack) {
 ).</li>
 </ul>
 <p>Imaginary part is the coefficient of $i$.</p>
-<p><strong>Can be treated as a ldquo;single numberrdquo; containing two parts</strong></p>
+<p><strong>Can be treated as a "single number" containing two parts</strong></p>
 <h3 id="examples">Examples</h3>
 <blockquote>
 <p>$$z = 5 + 3i$$
