--- a/Genetic-Evidence-for-Evolution/index.html
+++ b/Genetic-Evidence-for-Evolution/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -331,7 +334,7 @@ if (!doNotTrack) {
         </aside>
         <h1 id="genetic-evidence-for-evolution">Genetic Evidence for Evolution</h1>
 <p>See [[Genetics]].</p>
-<p>The fact that all organisms use DNA and RNA as ldquo;genetic coderdquo; indicates a common ancestor.
+<p>The fact that all organisms use DNA and RNA as "genetic code" indicates a common ancestor.
 Genes coding for common proteins across all organisms.</p>
 <p>Sequences of chromosomal and mitochondrial DNA can be compared between species to understand how related they are. This can tell us how long ago we shared a common ancestor with another species by creating a map of relatedness between many species.</p>
 <h1 id="references">References</h1>
