--- a/Hypothesis-Vs-Theory/index.html
+++ b/Hypothesis-Vs-Theory/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -330,7 +333,11 @@ if (!doNotTrack) {
             <nav id="TableOfContents"></nav>
         </aside>
         <h1 id="hypothesis-vs-theory">Hypothesis Vs Theory</h1>
-<p>In the scientific context, a theory is much more ldquo;provenrdquo; than a hypothesis. This is not to say a theory necessarily has to be proved as fact, but a theory does have to be widely accepted and have extensive evidence to support it. A theory should be able to stand up to thorough and repeated testing and be confirmed by independent peer review researchers. A hypothesis on the other hand is more of a suggestion or explanation which can either be proved or disproved through the [[Scientific Method]]. A hypothesis takes the form of a statement with a ldquo;ifhellip; thenhellip;rdquo; structure.</p>
+<p>In the scientific context, a theory is much more "proven" than a hypothesis. This is not to say a theory necessarily has to be proved as fact, but a theory does have to be widely accepted and have extensive evidence to support it. A theory should be able to stand up to thorough and repeated testing and be confirmed by independent peer review researchers. A hypothesis on the other hand is more of a suggestion or explanation which can either be proved or disproved through the 
+
+
+<a href="../Scientific-Method" rel="noopener">Scientific Method</a>
+. A hypothesis takes the form of a statement with a "if... then..." structure.</p>
 <h1 id="references">References</h1>
 <ol>
 <li></li>
