--- a/Latex-Cheatsheet/index.html
+++ b/Latex-Cheatsheet/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -347,7 +350,7 @@ if (!doNotTrack) {
 y + x &= 1 \<br>
 y &= 1 -x
 \end{align}$
-\begin{align} hellip; \end{align}
+\begin{align} ... \end{align}
 #multi-line #align</p>
 <p>$\textrm{This is how to write text.}$
 \textrm{This is how to write text.}
