--- a/Natural-Selection/index.html
+++ b/Natural-Selection/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -352,7 +355,7 @@ if (!doNotTrack) {
 
 
 <a href="../Causes-of-Genetic-Variation" rel="noopener">Causes of Genetic Variation</a>
-) so that over time organisms with genes coding for ldquo;betterrdquo; traits will be selected over those with ldquo;worserdquo; traits.</p>
+) so that over time organisms with genes coding for "better" traits will be selected over those with "worse" traits.</p>
 <h1 id="references">References</h1>
 <ol>
 <li></li>
