--- a/Newton-Raphson-Method/index.html
+++ b/Newton-Raphson-Method/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -345,7 +348,7 @@ if (!doNotTrack) {
 <p>$x_0$ should be an initial approximation of the desired root. Iterating the above will return the value of the root closest to the initial approximation.</p>
 <p>Think of it like this:
 We keep drawing tangents to the graph at $f(x_n)$ . After every iteration, $x_n$ becomes the x intercept of the tangent. Eventually $x_n$ will move to the point where $f(x_n)$ is zero (the root of the function).</p>
-<p>Just jam the above into your calculator by getting an initial answer, then using the calculatorr's ldquo;ansrdquo; variable to iterate it until the output settles on a single value.</p>
+<p>Just jam the above into your calculator by getting an initial answer, then using the calculatorr's "ans" variable to iterate it until the output settles on a single value.</p>
 <h2 id="limitations">Limitations</h2>
 <p>Sometimes the initial approximation needs to be annoyingly accurate. The method might not work if there are point of inflection, local maxima or minima around $x_0$ or the root. See 
 
