--- a/The-Mind-as-a-Virtual-Machine/index.html
+++ b/The-Mind-as-a-Virtual-Machine/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -330,7 +333,7 @@ if (!doNotTrack) {
             <nav id="TableOfContents"></nav>
         </aside>
         <h1 id="the-mind-as-a-virtual-machine">The Mind as a Virtual Machine</h1>
-<p>This idea bases itself in the common analogy between computers and our brains. This idea particularly focuses on the concept of [[Virtualisation]]. In the same way that computerr's create a virtual front-end for userr's to interact with it, the ldquo;hardwarerdquo; of our brain, the complex network of neurons, creates a virtualization for us to comprehend. The idea is that this is related to the consciousness of an organism. If our brain can create a virtual model of itself, then through simulation we can gain an intuition for the behavior of other organisms with similar brains. For social animals like ourselves, this ldquo;naturalrdquo; psychology is a very useful trait to have.</p>
+<p>This idea bases itself in the common analogy between computers and our brains. This idea particularly focuses on the concept of [[Virtualisation]]. In the same way that computerr's create a virtual front-end for userr's to interact with it, the "hardware" of our brain, the complex network of neurons, creates a virtualization for us to comprehend. The idea is that this is related to the consciousness of an organism. If our brain can create a virtual model of itself, then through simulation we can gain an intuition for the behavior of other organisms with similar brains. For social animals like ourselves, this "natural" psychology is a very useful trait to have.</p>
 <p>Another part of this idea is that our brainr's compute in a parallel manner, however the virtualisation that we comprehend is serial or linear. Perhaps this developed in a response to the type of tasks humans have to do, however we donr't really have a good explanation for why we should think linearly.</p>
 <h1 id="references">References</h1>
 <ol>
