--- a/The-Motor-Effect/index.html
+++ b/The-Motor-Effect/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -343,7 +346,7 @@ if (!doNotTrack) {
 <blockquote>
 <p>When a current is passed through a conductor that is in a magnetic field, the conductor experiences a thrust or force.</p>
 </blockquote>
-<p>The current produces its own magnetic field which acts against the field of the ldquo;permanentrdquo; magnet.</p>
+<p>The current produces its own magnetic field which acts against the field of the "permanent" magnet.</p>
 <p><img src="Excalidraw/motor_effect.excalidraw.md" alt="Excalidraw/motor_effect.excalidraw.md"></p>
 <h2 id="flemings-left-hand-motor-rule">Flemingr's left-hand motor rule</h2>
 <ul>
