--- a/Unintuitive-questions-on-motion-heuristics/index.html
+++ b/Unintuitive-questions-on-motion-heuristics/index.html
@@ -10,6 +10,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -351,7 +354,7 @@ C            the speed of stone X is equal to the speed of stone Y
 D             the speed of stone X can only be compared to the speed of stone Y when the height of the building is known</p>
 </blockquote>
 <p>The correct answer is C.
-This is because while stone X is essentially ldquo;droppedrdquo; from a greater height (it has an initial velocity of zero at a greater height than the height stone Y is thrown from), and gravity has more time to act on the stone, the initial velocity of stone Y is much greater. Since the two stones are thrown at a velocity with the same magnitude but in opposite directions, the distance stone X travels upwards before gravity accelerates the stone downwards as to bring it to a momentary halt, gives gravity precisely the right amount of time for stone X to accelerate to the same speed at which stone Y hit the ground.</p>
+This is because while stone X is essentially "dropped" from a greater height (it has an initial velocity of zero at a greater height than the height stone Y is thrown from), and gravity has more time to act on the stone, the initial velocity of stone Y is much greater. Since the two stones are thrown at a velocity with the same magnitude but in opposite directions, the distance stone X travels upwards before gravity accelerates the stone downwards as to bring it to a momentary halt, gives gravity precisely the right amount of time for stone X to accelerate to the same speed at which stone Y hit the ground.</p>
 <p>Just know that if two objects are thrown at the same speed, one upwards and one downwards, then the objects will reach the exact same velocity when they hit the ground.</p>
 <p><img src="Unintuitive-questions-on-motion-(heuristics)_2021-10-24-16.59.28.excalidraw.md" alt="Unintuitive questions on motion (heuristics)_2021-10-24 16.59.28.excalidraw.md">
 Note that air resistance has to be negligible for the above to apply.</p>
