--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     
     <meta charset="UTF-8">
-    <meta name="description" content="Here is the page description. This is an example Quartz site that details installation, setup, customization, and troubleshooting for Quartz itself.">
+    <meta name="description" content="A bunch of notes made by me, for me, available to everyone.">
     <title>404 Page not found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="./icon.png" />
