--- a/Polynomial-Long-Division/index.html
+++ b/Polynomial-Long-Division/index.html
@@ -20,7 +20,7 @@
 <head>
     
     <meta charset="UTF-8">
-    <meta name="description" content="Here is the page description. This is an example Quartz site that details installation, setup, customization, and troubleshooting for Quartz itself.">
+    <meta name="description" content="A bunch of notes made by me, for me, available to everyone.">
     <title>Polynomial Long Division</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="../icon.png" />
@@ -594,11 +594,12 @@ if (!doNotTrack) {
 
 <div id="contact_buttons">
     <footer>
-        <p>Made by Jacky Zhao using <a href="https://github.com/jackyzha0/quartz">Quartz</a>, © 2021</p>
+        <p>Made by Nathan Macdonald using <a href="https://github.com/jackyzha0/quartz">Quartz</a>, © 2021</p>
         
         <a href="../">Home</a>
-        <a href="https://twitter.com/_jzhao">Twitter</a><a href="https://github.com/jackyzha0">Github</a></footer>
+        <a href="https://github.com/Nateml">Github</a></footer>
 </div>
+
 </div>
 </body>
 
